# liams_4x

./: .gitignore  Cargo.toml  README.md  aaaa
resources/sprites/: citizens.xcf  tiles.ron  tiles.xcf  yields.xcf
src/: main.rs
src/client/: constants.rs  crash_state.rs  drag.rs  hitbox.rs  imgui_wrapper.rs  in_game_state.rs  input_server_addr_state.rs  lobby_state.rs  main_menu_state.rs  mod.rs  object.rs  scene.rs  selected_object.rs  utils.rs
src/client/in_game_state/: draw.rs  mod.rs
src/client/scenes/: crash.rs  input_server_addr.rs  lobby.rs  main_menu.rs  mod.rs
src/client/scenes/in_game/: draw.rs  mod.rs
src/common/: actions.rs  building.rs  city.rs  city_names.rs  civilization.rs  events.rs  game_map.rs  game_world.rs  generate_world.rs  map_position.rs  mod.rs  player.rs  resource.rs  tech.rs  tile.rs  unit.rs  yields.rs
src/server/: mod.rs
