[package]
name = "liams_civilization"
version = "0.1.0"
authors = ["confusedcyborg"]
edition = "2018"

[dependencies]
ggez = "0.5.1"

gfx_core = "0.9.2"
gfx_device_gl = "0.16.2"

imgui = "0.4"
imgui-gfx-renderer = "0.4"

ncollide2d = "0.21"
rand = "0.7.3"
laminar = "0.4.0"
serde = "1.0.117"
ron = "0.6.2"
crossbeam-channel = "0.4.4"
