[package]
name = "liams_4x"
version = "0.1.0"
authors = ["confusedcyborg"]
edition = "2018"

[profile.dev]
opt-level = 1

[dependencies]
ggez = "0.6.1"

winit = "0.25"

gfx_core = "0.9.2"
gfx_device_gl = "0.16.2"

imgui = "0.7"
imgui-gfx-renderer = "0.7"

ncollide2d = "0.21"
rand = "0.7.3"
serde = "1.0.117"
ron = "0.6.2"
crossbeam-channel = "0.4.4"
bincode = "1.3.1"
clipboard = "0.5.0"
petgraph = { version = "0.5.1", features = ["serde-1"] }
